[package]
name = "skyvein-rust-api"
version = "0.5.0"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
futures = "0.3.10"
frame-support = "3.0.0"
frame-system = "3.0.0"
lazy_static = "1.4.0"
once_cell = "1.4.0"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
sp-core = "3.0.0"
sp-keyring = "3.0.0"
sp-runtime = "3.0.0"
# subxt = { version = "0.14", package = "substrate-subxt" }
subxt = { package = "substrate-subxt", git = "https://github.com/paritytech/substrate-subxt.git", rev = "c4405c40adf0dd9d0dcdab6ff964aecf043d152a" }
tokio = { version = "0.3.3", features = ["macros", "rt-multi-thread"] }
async-std = { version = "1.8.0", features = ["attributes"] }
log = "0.4.13"
hex = "0.4.2"

[profile.release]
opt-level = 3 # 3

[[example]]
name = "main"
path = "examples/main.rs"

[[example]]
name = "trace_source"
path = "examples/trace_source.rs"

[[example]]
name = "feeless"
path = "examples/feeless.rs"